# EnsarRoot

./: .gitignore  CMakeLists.txt
E105/: CMakeLists.txt
E105/E105Gen/: E105AsciiGenerator.cxx  E105AsciiGenerator.h
E105/macro/: eventDisplay.C  readPars.C  runSim.C  sim.C
calo/base/: R3BDetector.cxx  R3BModule.cxx
calo/cal/: CMakeLists.txt  R3BCalo.cxx  R3BCaloHitFinder.cxx
calo/cal/unpack/: R3BCaloRawAna.cxx  R3BCaloUnpack.cxx
calo/cal/unpacker/: CMakeLists.txt  OptionWrapper.h
calo/db/: CMakeLists.txt
calo/macros/califa/TUM/: r3bevtvis.C
calo/passive/: R3BTarget.cxx
cmake/modules/: ENSARGenerateVersionInfo.cmake
cmake/scripts/: ENSARRootVersion.h.default  ENSARRootVersion.h.tmp
ctn/detector/: CMakeLists.txt  EnsarHPGeDet.cxx
ctn/macros/nov16/: Angles_datafile.C  Crystal_Response.C  Crystal_Response_with_errors.C  checkR_AngularCorrelations.C  checkR_CryId_angles.C  checkR_CrystalAngles_petals.C  checkR_HPGe.C  checkR_HPGe_and_Petals.C  checkR_MC_AngCorrelations.C  checkR_PrimaryGammas.C  checkR_PrimaryGammas_Crystal.C  checkR_anglePetals.C  checkR_petals.C  checkResults_CryId_angles.C  checkResults_Crystals.C  checkResults_ResolutionCry_angulos.C  checkResults_Resolution_ntupla.C  checkResults_Resolution_struct.C  checkResults_gammaCorrelation.C  eficiency_HPGe.C  plot_AngularCorrelations.C  read.C  read_anglesMC.C  runsim.C  runsim_2.C  simall.C  simall_2.C  utilities.C
ctn/macros/nov16/geo/: create_califa_petals.C  create_califa_petals_box.C  create_hpge_and_reaction_chamber_geo.C
ctn/macros/nov16/originales/: runsim.C  simall.C
ensarbase/: EnsarModule.cxx
ensardata/: EnsarMCStack.cxx
ensargen/: EnsarBoxGenerator.cxx  EnsarCascadeGen.cxx  EnsarSiGenerator.cxx
gconfig/: basiclibs.C
macros/: simall.C
naidetector/detector/: NaIDetector.cxx
scitof/macros/: simall.C
template_scintillator/: CMakeLists.txt
template_silicon/: CMakeLists.txt
template_silicon/geometry/: EnsarSilicon.h
tragaldabas/rpc/: CMakeLists.txt  TraRPC.cxx  TraRPCHit2Saeta.cxx
